force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__AnswerFormat__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AnswerFormat__c</fullName>
    <label>Answer Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>