force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__CategoryStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__CategoryStub__c</fullName>
    <externalId>true</externalId>
    <label>Category Stub</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>