force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__CventQuestionStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__CventQuestionStub__c</fullName>
    <description>Stores Cvent database question stub.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores Cvent database question stub.</inlineHelpText>
    <label>Cvent Question Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>