force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__FullQuestionText__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__FullQuestionText__c</fullName>
    <label>Full Question Text</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>