force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__QuestionCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__QuestionCode__c</fullName>
    <label>Question Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>