force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__QuestionStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__QuestionStub__c</fullName>
    <description>Stores either category stub for matrix questions or question stub for other question types.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores either category stub for matrix questions or question stub for other question types.</inlineHelpText>
    <label>Question Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>