force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__QuestionTagName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__QuestionTagName__c</fullName>
    <externalId>true</externalId>
    <label>Question Tag Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>