force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__QuestionTagStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__QuestionTagStub__c</fullName>
    <externalId>true</externalId>
    <label>Question Tag Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>