force-app/main/default/objects/CventEvents__SurveyQuestion__c/fields/CventEvents__QuestionText__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__QuestionText__c</fullName>
    <label>Question Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>